# fastapi-template

./: .env.default  .gitignore  README.md  pyproject.toml
,github/prompts/: copilot-instructions.md
.github/: copilot-instructions.md
scripts/: lint_format_test.py
