[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.11",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.1",
    "ipython>=9.0.2",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]
